# autonomous-notebooks

./: .gitignore  .mcp.json  AGENTS.md  README.md  feedback.md  justfile  pyproject.toml  pyrightconfig.json  research.ipynb
.claude/: settings.json
journal/: 01-vscode-bridge-spike.md  02-headless-cli.md  03-containerised-kernels.md  04-collaboration.md  05-product-cleanup.md  06-beta-testing.md  07-rough-edges.md  08-shared-node-security.md  09-feedback-fixes.md  10-gpu-sandbox-fix.md  11-beta-feedback-round-2.md  12-mcp-rewrite.md  13-async-exec.md  14-wait-tool.md  15-observability-and-hardening.md  16-kernel-reattach.md
nbs/: gpu.ipynb  research.ipynb  test.ipynb  test2.ipynb  wait_test.ipynb
src/autonomous_notebooks/: _log.py  cli.py  cli2.py  exec_runner.py  jobs.py  kernels.py  nb_io.py  proxy.py  server.py
src/autonomous_notebooks/podman_hpc/: Containerfile  Containerfile.dev  kernel.py
test/: test_all.py  test_collab.py  test_exec_recovery.py  test_kernel.py  test_kernels.py  test_log.py  test_nb_io.py  test_server_tools.py  test_watch_cli.py
