[project]
name = "autonomous-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter-client>=8.8.0",
    "nbformat>=5.10.4",
]

[project.scripts]
nb = "autonomous_notebooks.cli2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbstripout>=0.9.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autonomous_notebooks"]

[tool.ruff]
src = ["src", "test"]

[tool.pytest.ini_options]
testpaths = ["test"]
